# snek-game-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/: font.cpp  game.cpp  main.cpp  render.cpp  snake.cpp
src/include/: constants.h  font.h  font_data.h  game.h  logger.h  render.h  snake.h
